--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Alexis P">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Your+Font+Name:wght@400;700&display=swap">
     <link rel="stylesheet" href="assets/style.css">
     <title>The Collection</title>
 </head>
+<header><h1>Collection project</h1></header>
 <body>
     <script defer src="assets/script.js"></script> <!-- "defer" pour que le script ne s'exécute qu'une fois que le document est analysé -->
 </body>
