avancée project collection

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="assets/style.css">
     <title>The Collection</title>
 </head>
-<header><h1>Collection project</h1></header>
+<header>
+    <div class="image_banniere"><img src="assets/images/profilepicture.png" width="100" height="100"></div>
+    <div class="paragraphe_banniere">
+    <h1>COLLECTION</h1>
+    <p>My favorite US hip hop albums from the 90s</p>
+    </div>
+</header>
 <body>
     <script defer src="assets/script.js"></script> <!-- "defer" pour que le script ne s'exécute qu'une fois que le document est analysé -->
 </body>
